# cmakeBeispiel

./: .gitignore  CMakeLists.txt
ExampleLib/: CMakeLists.txt  ExampleLib.hpp
ExampleLib/src/: ExampleLib.cpp
ExampleLib/tests/: CMakeLists.txt
ExampleLib/tests/src/: ExampleLibTest.cpp
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
